added position for title spans

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <header>
-      <h1 class="page_title">Andrew's Personal Page</h1>
+      <h1 class="page_title">
+        <span class="page_title__one">Andrew's</span>
+        <span class="page_title_two">Personal Page</span>
+      </h1>
       <nav class="page_nav">
         <ul class="page_nav__nav_list">
           <li class="nav_list__item"><a href="#">about</a></li>
