--- a/index.html
+++ b/index.html
@@ -9,47 +9,15 @@
   </head>
   <body>
     <header>
-      <h1 class="page_title">
-        <span class="page_title__one">Andrew's</span>
-        <span class="page_title_two">Personal Page</span>
-      </h1>
-      <nav class="page_nav">
-        <ul class="page_nav__nav_list">
-          <li class="nav_list__item"><a href="#">about</a></li>
-          <li class="nav_list__item"><a href="#">home</a></li>
-        </ul>
-      </nav>
+      <div class="wrap">
+        <h1 class="title">
+          <span class="title__one">Andrew's</span>
+          <span class="title__two">Personal Page</span>
+        </h1>
+        <nav><ul></ul></nav>
+      </div>
     </header>
-    <main>
-      <section class="intro">
-        <div class="page_wrap">
-          <h2 class="intro__title">About me</h2>
-          <p class="intro__paragraph">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
-            dolorum autem nemo inventore error voluptatum quis illo aut
-            laboriosam sapiente?
-          </p>
-          <figure class="intro_images"></figure>
-        </div>
-      </section>
-      <section class="courses">
-        <div class="page_wrap">
-          <h2>Courses I'm currently taking</h2>
-          <div>
-            <ul>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-            </ul>
-          </div>
-        </div>
-      </section>
-      <section class="favorites"></section>
-    </main>
-    <footer>
-      <p>&copy;2022</p>
-    </footer>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
