styling intro section

--- a/index.html
+++ b/index.html
@@ -14,10 +14,23 @@
           <span class="title__one">Andrew's</span>
           <span class="title__two">Personal Page</span>
         </h1>
-        <nav><ul></ul></nav>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="introduction">
+        <div class="wrap intro">
+          <div class="title__wrap">
+            <h2 class="title__wrap_text">Andrew's Journey</h2>
+            <p class="title__wrap_subtext">Learning to code</p>
+          </div>
+
+          <p class="introduction__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+            aliquid quam soluta fuga beatae unde, omnis ipsam dicta enim qui?
+          </p>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
