added courses section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
           </p>
         </div>
       </section>
+      <section class="courses">
+        <div class="wrap">
+          <h2 class="courses__title">My classes at Langara</h2>
+          <p class="courses__subtext">
+            I chose Langara to attend as it was an institution I was familiar
+            with having taking courses there in the early 2000s.
+          </p>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
