added courese list with icons

--- a/index.html
+++ b/index.html
@@ -37,12 +37,47 @@
             I chose Langara to attend as it was an institution I was familiar
             with having taking courses there in the early 2000s.
           </p>
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+          <ul class="courses_list">
+            <li class="courses_list__item">
+              <img src="images/online-learning.png" alt="computer icon" />
+              <p class="courses_list__item__title">CPSC1030</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+                facere!
+              </p>
+            </li>
+            <li class="courses_list__item">
+              <img src="images/online-learning.png" alt="computer icon" />
+              <p class="courses_list__item__title">CPSC1045</p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum,
+                corrupti.
+              </p>
+            </li>
+            <li class="courses_list__item">
+              <img src="images/online-learning.png" alt="computer icon" />
+              <p class="courses_list__item__title">CPSC1050</p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Consequatur, reprehenderit.
+              </p>
+            </li>
+            <li class="courses_list__item">
+              <img src="images/french.png" alt="french icon" />
+              <p class="courses_list__item__title">FREN1115</p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt,
+                consequatur.
+              </p>
+            </li>
+            <li class="courses_list__item">
+              <img src="images/conversation.png" alt="communications icon" />
+              <p class="courses_list__item__title">CMNS1118</p>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Assumenda, aperiam.
+              </p>
+            </li>
           </ul>
         </div>
       </section>
