adding favorite websites section

--- a/index.html
+++ b/index.html
@@ -81,6 +81,17 @@
           </ul>
         </div>
       </section>
+      <section class="web_sites">
+        <div class="wrap sites">
+          <div class="img_wrap">
+            <img
+              src="images/ilya-pavlov-OqtafYT5kTw-unsplash.jpg"
+              alt="image of web code"
+            />
+          </div>
+          <h2 class="web_sites__title">Some of my favorite sites</h2>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
