adding text and img to favorite site section

--- a/index.html
+++ b/index.html
@@ -89,7 +89,14 @@
               alt="image of web code"
             />
           </div>
-          <h2 class="web_sites__title">Some of my favorite sites</h2>
+          <div class="text_wrap">
+            <h2 class="web_sites__title">Some of my favorite sites</h2>
+            <p>
+              Below I have listed some of the pages that have inspired me in my
+              web page building. I hope you can get some motivation from these
+              pages as well.
+            </p>
+          </div>
         </div>
       </section>
     </main>
