completed flex on website anchors and added footer

--- a/index.html
+++ b/index.html
@@ -98,8 +98,40 @@
             </p>
           </div>
         </div>
+        <div class="wrap sites__list">
+          <ul class="web_sites__list">
+            <li>
+              <a href="https://bstd.ru/" target="_blank">
+                <img src="images/bstd.png" alt="webpage image" />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.salvatorecasalino.it/interactive-resume/"
+                target="_blank"
+              >
+                <img src="images/salvatore.png" alt="webpage image" />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.hkdi.edu.hk/dreamfactory/index.html"
+                target="_blank"
+              >
+                <img src="images/dreamfactory.png" alt="webpage image" />
+              </a>
+            </li>
+            <li>
+              <a href="http://littlehelper.resn.global/" target="_blank">
+                <img src="images/resn.png" alt="webpage image" />
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <small>&copy; Andrew Reynolds 2022</small>
+    </footer>
   </body>
 </html>
