updated copy material of site

--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
           </div>
 
           <p class="introduction__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
-            aliquid quam soluta fuga beatae unde, omnis ipsam dicta enim qui?
+            I've been learning to build websites and coding since the mid 90's.
+            I grew up while the World Wide Web was just getting started. Since
+            then I've been able to learn new technologies as they have
+            developed, and have probably forgotten as much as I have learned
+            along the way.
           </p>
         </div>
       </section>
