adding h2 and p to main

--- a/javajam/index.html
+++ b/javajam/index.html
@@ -26,6 +26,11 @@
       </ul>
     </nav>
     <main>
+      <h2>Relax at JavaJam</h2>
+      <p>
+        Friendly and exlectic - JavaJam Coffee Bar is the perfect place to take
+        a break, enjoy a refreshing beverage, and have a snack or light meal.
+      </p>
       <div></div>
     </main>
     <footer></footer>
