intial page layout complete

--- a/javajam/index.html
+++ b/javajam/index.html
@@ -31,8 +31,28 @@
         Friendly and exlectic - JavaJam Coffee Bar is the perfect place to take
         a break, enjoy a refreshing beverage, and have a snack or light meal.
       </p>
-      <div></div>
+      <ul>
+        <li>Special Coffee adn Organic Tea</li>
+        <li>Bagels, Muffins, and Gluten-free Pastries</li>
+        <li>Organic Salads</li>
+        <li>Music and Poetry Readings</li>
+        <li>Open Mic Night</li>
+      </ul>
+      <div>
+        <p>12010 Garrett Bay Road</p>
+        <p>Ellison Bay, WI 54210</p>
+        <p>888-555-5555</p>
+      </div>
     </main>
-    <footer></footer>
+    <footer>
+      <p>
+        <small><i>Copyright &copy; 2020 JavaJam Coffee Bar</i></small>
+      </p>
+      <p>
+        <small>
+          <a href="mailto:andrew@reynolds.com"><i>andrew@reynolds.com</i></a>
+        </small>
+      </p>
+    </footer>
   </body>
 </html>
