adding title text and title card

--- a/javajam/index.html
+++ b/javajam/index.html
@@ -8,7 +8,12 @@
     <title>JavaJam</title>
   </head>
   <body>
-    <header><h1>JavaJam Coffee Bar</h1></header>
+    <header>
+      <div class="title_card">
+        <h1 class="page_title">JavaJam Coffee Bar</h1>
+        <p class="page_title__subtext">Where roasting is an art</p>
+      </div>
+    </header>
     <nav>
       <ul>
         <li>
