--- a/javajam/index.html
+++ b/javajam/index.html
@@ -14,8 +14,8 @@
         <p class="page_title__subtext">Where roasting is an art</p>
       </div>
     </header>
-    <nav>
-      <ul>
+    <nav class="navigation">
+      <ul class="navigation__list">
         <li>
           <a href="index.html"><b>Home</b></a>
         </li>
