updated style sheet to be shared and added header nav and footer to menu page

--- a/javajam/menu.html
+++ b/javajam/menu.html
@@ -4,7 +4,42 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/shared.css" />
     <title>JavaJam Menu</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="title_card">
+        <h1 class="page_title">JavaJam Coffee Bar</h1>
+        <p class="page_title__subtext">Where roasting is an art</p>
+      </div>
+    </header>
+    <nav class="navigation">
+      <ul class="navigation__list">
+        <li>
+          <a href="index.html"><b>Home</b></a>
+        </li>
+        <li>
+          <a href="menu.html"><b>Menu</b></a>
+        </li>
+        <li>
+          <a href="music.html"><b>Music</b></a>
+        </li>
+        <li>
+          <a href="jobs.html"><b>Jobs</b></a>
+        </li>
+      </ul>
+    </nav>
+    <main></main>
+    <footer>
+      <p>
+        <small><i>Copyright &copy; 2020 JavaJam Coffee Bar</i></small>
+      </p>
+      <p>
+        <small>
+          <a href="mailto:andrew@reynolds.com"><i>andrew@reynolds.com</i></a>
+        </small>
+      </p>
+    </footer>
+  </body>
 </html>
