added semi circle with background img

--- a/javajam/index.html
+++ b/javajam/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/shared.css" />
+    <link rel="stylesheet" href="styles/main.css" />
     <title>JavaJam</title>
   </head>
   <body>
@@ -31,22 +32,26 @@
       </ul>
     </nav>
     <main>
-      <h2>Relax at JavaJam</h2>
-      <p>
-        Friendly and exlectic - JavaJam Coffee Bar is the perfect place to take
-        a break, enjoy a refreshing beverage, and have a snack or light meal.
-      </p>
-      <ul>
-        <li>Special Coffee adn Organic Tea</li>
-        <li>Bagels, Muffins, and Gluten-free Pastries</li>
-        <li>Organic Salads</li>
-        <li>Music and Poetry Readings</li>
-        <li>Open Mic Night</li>
-      </ul>
-      <div>
-        <p>12010 Garrett Bay Road</p>
-        <p>Ellison Bay, WI 54210</p>
-        <p>888-555-5555</p>
+      <div class="content_wrap">
+        <h2>Relax at JavaJam</h2>
+        <div class="coffee_wrap"></div>
+        <p>
+          Friendly and exlectic - JavaJam Coffee Bar is the perfect place to
+          take a break, enjoy a refreshing beverage, and have a snack or light
+          meal.
+        </p>
+        <ul>
+          <li>Special Coffee adn Organic Tea</li>
+          <li>Bagels, Muffins, and Gluten-free Pastries</li>
+          <li>Organic Salads</li>
+          <li>Music and Poetry Readings</li>
+          <li>Open Mic Night</li>
+        </ul>
+        <div>
+          <p>12010 Garrett Bay Road</p>
+          <p>Ellison Bay, WI 54210</p>
+          <p>888-555-5555</p>
+        </div>
       </div>
     </main>
     <footer>
