added bottom half of cirle

--- a/javajam/index.html
+++ b/javajam/index.html
@@ -33,9 +33,9 @@
     </nav>
     <main>
       <div class="content_wrap">
-        <h2>Relax at JavaJam</h2>
+        <h2 class="coffee_title">Relax at JavaJam</h2>
         <div class="coffee_wrap"></div>
-        <p>
+        <p class="coffee_text">
           Friendly and exlectic - JavaJam Coffee Bar is the perfect place to
           take a break, enjoy a refreshing beverage, and have a snack or light
           meal.
@@ -47,6 +47,8 @@
           <li>Music and Poetry Readings</li>
           <li>Open Mic Night</li>
         </ul>
+        <div class="coffee_wrap__bottom"></div>
+
         <div>
           <p>12010 Garrett Bay Road</p>
           <p>Ellison Bay, WI 54210</p>
