--- a/javajam/index.html
+++ b/javajam/index.html
@@ -34,28 +34,35 @@
     <main>
       <div class="content_wrap">
         <h2 class="coffee_title">Relax at JavaJam</h2>
-        <div class="coffee_wrap"></div>
-        <p class="coffee_text">
-          Friendly and exlectic - JavaJam Coffee Bar is the perfect place to
-          take a break, enjoy a refreshing beverage, and have a snack or light
-          meal.
-        </p>
-        <ul>
-          <li>Special Coffee adn Organic Tea</li>
-          <li>Bagels, Muffins, and Gluten-free Pastries</li>
-          <li>Organic Salads</li>
-          <li>Music and Poetry Readings</li>
-          <li>Open Mic Night</li>
-        </ul>
-        <div class="coffee_wrap__bottom"></div>
-
-        <div>
-          <p>12010 Garrett Bay Road</p>
-          <p>Ellison Bay, WI 54210</p>
-          <p>888-555-5555</p>
+        <div class="flex_container">
+          <div class="flex_container_content1">
+            <div class="coffee_wrap"></div>
+            <p class="coffee_text">
+              Friendly and exlectic - JavaJam Coffee Bar is the perfect place to
+              take a break, enjoy a refreshing beverage, and have a snack or
+              light meal.
+            </p>
+          </div>
+          <div class="flex_container_content2">
+            <ul>
+              <li>Special Coffee adn Organic Tea</li>
+              <li>Bagels, Muffins, and Gluten-free Pastries</li>
+              <li>Organic Salads</li>
+              <li>Music and Poetry Readings</li>
+              <li>Open Mic Night</li>
+            </ul>
+            <div class="coffee_wrap__bottom"></div>
+          </div>
         </div>
       </div>
     </main>
+    <aside class="contact">
+      <div>
+        <p>12010 Garrett Bay Road</p>
+        <p>Ellison Bay, WI 54210</p>
+        <p>888-555-5555</p>
+      </div>
+    </aside>
     <footer>
       <p>
         <small><i>Copyright &copy; 2020 JavaJam Coffee Bar</i></small>
