correct copy spelling

--- a/javajam/index.html
+++ b/javajam/index.html
@@ -38,7 +38,7 @@
           <div class="flex_container_content1">
             <div class="coffee_wrap"></div>
             <p class="coffee_text">
-              Friendly and exlectic - JavaJam Coffee Bar is the perfect place to
+              Friendly and eclectic - JavaJam Coffee Bar is the perfect place to
               take a break, enjoy a refreshing beverage, and have a snack or
               light meal.
             </p>
