--- a/pacific/index.html
+++ b/pacific/index.html
@@ -11,11 +11,44 @@
       <h1>Pacific Trails Resort</h1>
     </header>
     <nav>
-      <a href="index.html">Home</a>&nbsp; <a href="yurts.html">Yurts</a>&nbsp;
-      <a href="activities.html">Activities</a>&nbsp;
-      <a href="reservations.html">Reservations</a>&nbsp;
+      <a href="index.html"><b>Home</b></a
+      >&nbsp; <a href="yurts.html">Yurts</a>&nbsp;
+      <a href="activities.html"><b>Activities</b></a
+      >&nbsp; <a href="reservations.html"><b>Reservations</b></a
+      >&nbsp;
     </nav>
-    <main></main>
-    <footer></footer>
+    <main>
+      <h2>Enjoy Nature in Luxury</h2>
+      <p>
+        Pacific Trails Resort on the California North Coast offers panoramic
+        views of the Pacific Ocean. Our guests experience an opulent camping
+        adventure in sumptuously appointed private yurts featuring a gas
+        fireplace, king-size bed, and private deck.
+      </p>
+      <ul>
+        <li>Unwind in the heated outdoor pool and whirlpool</li>
+        <li>Explore the coast on your wown or join our guided tours</li>
+        <li>Start the day with a complimentary cooked-to-order breakfast</li>
+        <li>
+          Relax in our lodge while enjoying complimentary appetizers and
+          beverages
+        </li>
+        <li>Savor nightly fine dining with an ocean view</li>
+      </ul>
+      <div>
+        Pacific Trails Resort<br />
+        12010 Pacific Trails Road<br />
+        Zephyr, CA 95555<br /><br /><br />
+        888-555-5555<br /><br /><br />
+      </div>
+    </main>
+    <footer>
+      <small
+        ><i
+          >Copyright &copy; 2020 Pacific Trails Resort<br />
+          <a href="mailto:andrew@reynolds.com">andrew@reynolds.com</a></i
+        ></small
+      >
+    </footer>
   </body>
 </html>
